fixed margin in  the side bar to center and h1, h2 alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ h1, h2 {
     padding-bottom: 13px;
     font-weight: bold;
     margin-top: 23px;
-    margin-left: 32px;
 }
 
 body{
@@ -32,6 +31,7 @@ margin-top: 20px;
 width: 270px;
 border: 1px solid #dddddd;
 height: auto;
+text-align: center;
 }
 
 .mainContent{
@@ -41,6 +41,10 @@ height: auto;
     background-color: white;
     margin: 20px 0px 10px 0px;
     border: 1px solid #dddddd;
+}
+
+.mainContent h1{
+    margin-left: 32px;
 }
 
 .footer{
@@ -139,6 +143,8 @@ height: auto;
 }
 
 .mainContent p {
-    margin-right: 49px;
-    margin-left: 37px;
+    margin-right: 23px;
+    margin-left: 21px;
+    text-align: justify;
+    padding: 13px;
 }
